tests/lean/lua15b.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'Int'
  Assumed: i
  Assumed: j
  Assumed: p
hello
i + j
lua15b.lean:8: error: executing script
Failed to solve
 ⊢ (?M::0 ≈ Nat::add) ⊕ (?M::0 ≈ Int::add)
    [string]:3:12: Overloading at
        (Int::add | Nat::add) i p
    Failed to solve
     ⊢ ℤ ≺ ℕ
        [string]:3:12: Type of argument 1 must be convertible to the expected type in the application of
            Nat::add
        with arguments:
            i
            p
    Failed to solve
     ⊢ Bool ≺ ℤ
        [string]:3:12: Type of argument 2 must be convertible to the expected type in the application of
            Int::add
        with arguments:
            i
            p
