tests/lean/lua15b.lean
import Int.
variables i j : Int
variable p : Bool

(*
 local env = get_environment()

 parse_lean_cmds([[
    print "hello"
    eval i + j
    check i + p
]])
*)
